# torrentRemover

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  com.rich.torrentremover.plist  main.cpp
src/TorrentRemover/: CMakeLists.txt  TorrentRemover.cpp  TorrentRemover.h
src/app/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  test_torrentRemover.cpp
